Updated Bivariate Analysis
complete bivariate analysis

--- a/Bivariate.ipynb
+++ b/Bivariate.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 1,
    "id": "23312022",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "id": "1312c8b6",
    "metadata": {},
    "outputs": [
@@ -288,7 +288,7 @@
        "[215 rows x 15 columns]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 3,
    "id": "42eac9e4",
    "metadata": {},
    "outputs": [],
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 4,
    "id": "7f0f41be",
    "metadata": {},
    "outputs": [
@@ -574,7 +574,7 @@
        "[215 rows x 14 columns]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 5,
    "id": "53a68ad1",
    "metadata": {},
    "outputs": [
@@ -609,7 +609,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -620,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 6,
    "id": "6f21b6c0",
    "metadata": {},
    "outputs": [
@@ -730,7 +730,7 @@
        "salary    126245.485547  2.395714e+10  "
       ]
      },
-     "execution_count": 33,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -741,7 +741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 7,
    "id": "fe88532f",
    "metadata": {},
    "outputs": [],
@@ -752,7 +752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 8,
    "id": "4848ea8c",
    "metadata": {},
    "outputs": [
@@ -854,7 +854,7 @@
        "salary    0.538090  0.452569  0.408371  0.186988  0.139823  1.000000"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -865,17 +865,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 9,
    "id": "b7d24030",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# The correlation between mba_p mark and salary comes under positive correlation with only 14% which comes under Low degree positive correlation."
+    "# The correlation between mba_p mark and salary is a positive correlation with only 13% which comes under Low degree positive correlation."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 10,
    "id": "bafa7de1",
    "metadata": {},
    "outputs": [],
@@ -885,17 +885,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 11,
    "id": "1b533471",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x25dbe36ecf8>"
+       "<seaborn.axisgrid.PairGrid at 0x240e3fd7978>"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -916,7 +916,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 12,
    "id": "7f5c8b0d",
    "metadata": {},
    "outputs": [],
@@ -932,7 +932,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 13,
+   "id": "f525c283",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# vif[\"VIF\"]=[variance_inflation_factor(X.values,i) for i in range(X.shape[1])]\n",
+    "#x.shape[1]--->gives you number of columns\n",
+    "#for loop runs first, each columns are saved in 'i' and then passed as parameters of variance_inflation_factor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "id": "4e7cc68f",
    "metadata": {},
    "outputs": [
@@ -982,7 +994,7 @@
        "1    salary  3.248087"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -993,7 +1005,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 15,
    "id": "fc7c9c8c",
    "metadata": {},
    "outputs": [
@@ -1043,7 +1055,7 @@
        "1    salary  2.707661"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1054,68 +1066,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
-   "id": "5d25b532",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Variables</th>\n",
-       "      <th>VIF</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>ssc_p</td>\n",
-       "      <td>3.248087</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>salary</td>\n",
-       "      <td>3.248087</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  Variables       VIF\n",
-       "0     ssc_p  3.248087\n",
-       "1    salary  3.248087"
-      ]
-     },
-     "execution_count": 46,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "calc_vif(dataset[[\"ssc_p\",\"salary\"]])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 16,
    "id": "ade300e2",
    "metadata": {},
    "outputs": [
@@ -1165,7 +1116,7 @@
        "1    salary  2.745261"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1176,7 +1127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 17,
    "id": "93534c5d",
    "metadata": {},
    "outputs": [
@@ -1226,7 +1177,7 @@
        "1    salary  2.940539"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1236,14 +1187,369 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "080f4739",
+   "metadata": {},
+   "source": [
+    "All the quantitative inputs are moderately correlated with the output"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "ad5e6a63",
+   "execution_count": 18,
+   "id": "c09e4d8d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ttest_indResult(statistic=2.1103433958668765, pvalue=0.03599560646745178)"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Unpaired t Test(different group same condition)\n",
+    "from scipy.stats import ttest_ind\n",
+    "dataset=dataset.dropna()\n",
+    "male=dataset[dataset['gender']==\"M\"]['salary']\n",
+    "female=dataset[dataset['gender']==\"F\"]['salary']\n",
+    "ttest_ind(male,female)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "bda1946b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ttest_relResult(statistic=0.6852881050898078, pvalue=0.49431164600731503)"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Paired t Test(same group, but different condition)\n",
+    "from scipy.stats import ttest_rel\n",
+    "male1=dataset[dataset['gender']=='M']['ssc_p']\n",
+    "male2=dataset[dataset[\"gender\"]=='M']['hsc_p']\n",
+    "ttest_rel(male1,male2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "64c03360",
+   "metadata": {},
+   "source": [
+    "Assignment:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "4d0d10c6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ttest_indResult(statistic=-0.7331285580404581, pvalue=0.46432995253854314)"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Unpaired t Test (different group and same condition)\n",
+    "from scipy.stats import ttest_ind\n",
+    "commerce=dataset[dataset[\"hsc_s\"]==\"Commerce\"]['mba_p']\n",
+    "science=dataset[dataset[\"hsc_s\"]==\"Science\"]['mba_p']\n",
+    "ttest_ind(commerce,science)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "83957ec7",
+   "metadata": {},
+   "source": [
+    "The t Test of Commerce and Science student's MBA marks have more similarity, but probability is not acceptable."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "606003a0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ttest_relResult(statistic=-7.868552092606869, pvalue=2.462926468454984e-12)"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Paired t Test (same group, but different condition)\n",
+    "from scipy.stats import ttest_rel\n",
+    "commerce1=dataset[dataset['hsc_s']=='Commerce'][\"mba_p\"]\n",
+    "commerce2=dataset[dataset['hsc_s']=='Commerce']['etest_p']\n",
+    "ttest_rel(commerce1,commerce2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "15913ee8",
+   "metadata": {},
+   "source": [
+    "The t Test value of Commerce student's MBA and Entrance test marks have more similarity, but probability is not acceptable."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "e2ba96b4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n"
+    "#Hypothesis Testing is based on the t Test results. Unpaired t Test (different group, but same condition)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "82e76ea5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ttest_indResult(statistic=-0.7331285580404581, pvalue=0.46432995253854314)"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from scipy.stats import ttest_ind\n",
+    "commerce=dataset[dataset[\"hsc_s\"]==\"Commerce\"]['mba_p']\n",
+    "science=dataset[dataset[\"hsc_s\"]==\"Science\"]['mba_p']\n",
+    "ttest_ind(commerce,science)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ddb543e2",
+   "metadata": {},
+   "source": [
+    "Is there any difference between the MBA marks of commerce and science students?\n",
+    "The t Test of Commerce and Science students MBA mark's probability is not acceptable,so it accepts null hypothesis.\n",
+    "i.e., there is no significant difference between the MBA marks of commerce and science students. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "069d7735",
+   "metadata": {},
+   "source": [
+    "# ANOVA (one-way classification)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "9906f9dd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "F_onewayResult(statistic=16.97502595052727, pvalue=6.548707180493164e-08)"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import scipy.stats as stats\n",
+    "stats.f_oneway(dataset['ssc_p'],dataset['hsc_p'],dataset['mba_p'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c61e0e55",
+   "metadata": {},
+   "source": [
+    "# ANOVA (two-way classification)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4e71b01b",
+   "metadata": {},
+   "source": [
+    "import statsmodels.api as sm\n",
+    "from statsmodels.formula.api import ols\n",
+    "model=ols('salary~C(hsc_s)+C(degree_t)+C(hsc_s):C(degree_t)',data=dataset).fit()\n",
+    "sm.stats.anova_lm(model,typ=2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ef081da1",
+   "metadata": {},
+   "source": [
+    "import statsmodels.api as sm\n",
+    "from statsmodels.formula.api import ols\n",
+    "anova_two=ols('salary~hsc_s+degree_t+hsc_s*degree_t',data=dataset).fit()\n",
+    "anova_results=sm.stats.anova_lm(anova_two,typ=2)\n",
+    "anova_results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "0f49ff7f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sum_sq</th>\n",
+       "      <th>df</th>\n",
+       "      <th>F</th>\n",
+       "      <th>PR(&gt;F)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>ssc_p</th>\n",
+       "      <td>689.380499</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>4.456718</td>\n",
+       "      <td>0.035964</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>hsc_p</th>\n",
+       "      <td>595.340188</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>3.848764</td>\n",
+       "      <td>0.051123</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>degree_p</th>\n",
+       "      <td>265.020592</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.713309</td>\n",
+       "      <td>0.192008</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ssc_p:hsc_p</th>\n",
+       "      <td>385.762024</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.493880</td>\n",
+       "      <td>0.115817</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ssc_p:degree_p</th>\n",
+       "      <td>20.306501</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.131278</td>\n",
+       "      <td>0.717480</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>hsc_p:degree_p</th>\n",
+       "      <td>660.709497</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>4.271365</td>\n",
+       "      <td>0.040004</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ssc_p:hsc_p:degree_p</th>\n",
+       "      <td>1.153844</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.007459</td>\n",
+       "      <td>0.931258</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Residual</th>\n",
+       "      <td>32019.476573</td>\n",
+       "      <td>207.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                            sum_sq     df         F    PR(>F)\n",
+       "ssc_p                   689.380499    1.0  4.456718  0.035964\n",
+       "hsc_p                   595.340188    1.0  3.848764  0.051123\n",
+       "degree_p                265.020592    1.0  1.713309  0.192008\n",
+       "ssc_p:hsc_p             385.762024    1.0  2.493880  0.115817\n",
+       "ssc_p:degree_p           20.306501    1.0  0.131278  0.717480\n",
+       "hsc_p:degree_p          660.709497    1.0  4.271365  0.040004\n",
+       "ssc_p:hsc_p:degree_p      1.153844    1.0  0.007459  0.931258\n",
+       "Residual              32019.476573  207.0       NaN       NaN"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import statsmodels.api as sm\n",
+    "from statsmodels.formula.api import ols\n",
+    "anova_two=ols('etest_p~ssc_p+hsc_p+degree_p+ssc_p*hsc_p*degree_p',data=dataset).fit()\n",
+    "anova_results=sm.stats.anova_lm(anova_two,typ=2)\n",
+    "anova_results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0cb91014",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
